--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "d3-delaunay": "^6.0.4",
+    "delaunator": "^5.0.1",
     "p5": "^1.9.0",
     "three": "^0.160.0"
   }
